# geolocation-engine2

./: .coverage  .dockerignore  .gitignore  ACCEPTANCE-TEST-HANDOFF.md  AI_DETECTION_SETUP_COMPLETE.txt  ARCHITECTURE_DELIVERY_COMPLETE.md  DELIVERY-CHECKLIST.md  DEMO.md  DEPLOYMENT.md  Dockerfile  EXECUTIVE_REPORT.md  GETTING_STARTED.md  GET_REAL_DETECTIONS.md  HOSTED_AI_SERVICES.md  HUGGINGFACE_INTEGRATION.md  IMPLEMENTATION-COMPLETE.md  INPUT_OUTPUT_EXAMPLE.md  LINTING_ISSUES.csv  LINTING_REPORT.md  LINTING_SUMMARY.txt  PHASE-05-SUMMARY.md  PROJECT_TOUR.md  QUICK_REFERENCE.md  README.md  REAL_AI_QUICKSTART.md  ROBOFLOW_INTEGRATION.md  SETUP_HUGGINGFACE_TOKEN.sh  SIMPLIFIED_SETUP.md  activate_huggingface.sh  jwt_auth.py  pyproject.toml  run_complete_system.sh  subar.txt  test_huggingface_token.py
.nwave/: execution-log.yaml
alembic/: env.py
docs/: AGENT-DISCORD-GUIDE.md  AUTOMATION-GUIDE.md  BUSINESS_FLOW_DIAGRAM.txt  DATA_TRANSFORMATION_FLOW.txt  DESIGN-WAVE-ARTIFACTS.md  DIAGRAMS_INDEX.txt  DISCORD-SETUP.md  DISCUSS-WAVE-ARTIFACTS.md  EXECUTIVE_SUMMARY.txt  GITHUB-WORKFLOW.md  NWAVE_RESTRUCTURE.md
infrastructure/: MONITORING_SETUP.md  docker-compose.monitoring.yml
kubernetes/: DEPLOYMENT_GUIDE.md
scripts/: README.md  deploy.sh  disaster-recovery.sh  discord-agent-progress.py  discord-notify-agent-completion.py  export_progress_docx.py  process-github-issues.py  process_github_issues.py  progress_generator.py  render_progress_pdf.py  update-progress-docs.py  update_progress.sh
src/: __init__.py  config.py  database.py  main.py  metrics.py  middleware.py  (+1 more)
(+336 files in other folders)
